--- a/Apna Culture/contact.html
+++ b/Apna Culture/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,6 +12,7 @@
         <a href="about.html"><div class="inside-nav">About</div></a>
         <a href="gallery.html"><div class="inside-nav">Gallery</div></a>
         <a href="contact.html"><div class="inside-nav">Contact</div></a>
+
     </div>
     <div class="saffron"></div>
     <div class="white"></div>
