--- a/Apna Culture/gallery.html
+++ b/Apna Culture/gallery.html
@@ -3,19 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Apna Culture</title>
+    <link rel="stylesheet" href="gallery.css">
 </head>
 <body>
     <div class="nav">
         <a href="index.html"><div class="inside-nav">Home</div></a>
         <a href="about.html"><div class="inside-nav">About</div></a>
         <a href="gallery.html"><div class="inside-nav">Gallery</div></a>
+        <a href="contact.html"><div class="inside-nav">Contact</div></a>
+
     </div>
     <div class="saffron"></div>
     <div class="white"></div>
     <div class="green"></div>
 
+<div class="gallery">
+    <div class="row">
+        <div class="bx" id="gl1"></div>
+        <div class="bx" id="gl2"></div>
+        <div class="bx" id="gl3"></div>
+    </div>
+   
+</div>
+
+
+<div class="gallery">
+  <div class="row">
+      <div class="bx" id="gl4"></div>
+      <div class="bx" id="gl5"></div>
+      <div class="bx" id="gl6"></div>
+  </div>
+  
+</div>
+
+
+<div class="gallery">
+  <div class="row">
+      <div class="bx" id="gl7"></div>
+      <div class="bx" id="gl8"></div>
+      <div class="bx" id="gl9"></div>
+  </div>
+  
+</div>
+<div class="gallery">
+  <div class="row">
+      <div class="bx" id="gl10"></div>
+      <div class="bx" id="gl11"></div>
+      <div class="bx" id="gl12"></div>
+  </div>
+  
+</div>
+<div class="gallery">
+  <div class="row">
+      <div class="bx" id="gl13"></div>
+      <div class="bx" id="gl14"></div>
+      <div class="bx" id="gl15"></div>
+  </div>
+  
+</div>
 
 </body>
 </html>
