--- a/Apna Culture/index.html
+++ b/Apna Culture/index.html
@@ -11,6 +11,8 @@
         <a href="index.html"><div class="inside-nav">Home</div></a>
         <a href="about.html"><div class="inside-nav">About</div></a>
         <a href="gallery.html"><div class="inside-nav">Gallery</div></a>
+        <a href="contact.html"><div class="inside-nav">Contact</div></a>
+
     </div>
     <div class="saffron"></div>
     <div class="white"></div>
@@ -18,11 +20,32 @@
 
     <div class="poster">
         <div class ='map'>
-        <img src="map.png" alt="map" width="42%">
+        <img src="map.png" alt="map" width="70%">
         </div>
-        <div class="ind"> india India 
+        <div class="ind"> <p id="in">India</p>
+            <p>
+                Indian heritage dates back several centuries. <br>
+                It is vast and vibrant. Flora and fauna, music, <br>
+                architecture, classical dance, and the innate <br>
+                 secular philosophy of its people are the <br>
+                 highlights of India's treasure. 
+            </p>
         </div>
     </div>
+<div class="links">
+    <div class="rw">
+        <div class="box" id="im1">ART</div>
+        <div class="box" id="im2">MUSIC</div>
+        <div class="box" id="im3">DANCE</div>
 
+        <div class="box" id="im4">CUISINE</div>
+        <div class="box" id="im5">FESTIVALS</div>
+        <div class="box" id="im6">TEXTILES</div>
+
+        <div class="box" id="im7">MYTHOLOGY</div>
+        <div class="box" id="im8">SPIRITUALITY</div>
+        <div class="box" id="im9">HISTORY</div>
+    </div>
+</div>
 </body>
 </html>
